T908 - JStruct_AtomicLongMap - fixed code smell changes